--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
 	<section id="contact">
 		<h3>Contact me</h3>
 		<ul>
-			<li class="bg-icon github">Homepage: <a href="https://harry1209.github.io" target="_blank">harry1209.github.io</a></li>
-			<li class="bg-icon email">Email: harry1209xiaopan@gmail.com</li>
-			<li class="bg-icon phone">Phone: 226-978-6691</li>
+			<li>Homepage: <a href="https://harry1209.github.io" target="_blank">harry1209.github.io</a></li>
+			<li>Email: harry1209xiaopan@gmail.com</li>
+			<li>Phone: 226-978-6691</li>
 		</ul>
 	</section>
 	<script src="h.js"></script>
