--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 			<p class="page-title">&lt;works&gt;</p>
 			<div class="rows">
 				<h1>HIS - Hospital Information System</h1>
-				<p class="link">view demo GitHub project</p>
+				<p class="link">view <a href="https://github.com/harry1209/HIS" target="_blank">project</a></p>
 				<div class="row1" style="margin-bottom: 50px;">
 					<section>
 						<h3>Basic Component</h3>
@@ -178,16 +178,15 @@
 					</section>
 					<div class="float-clear"></div>
 				</div>
-				<h1>Online shopping website</h1>
-				<p class="link">view demo GitHub project</p>
+				<h1>Blog</h1>
+				<p class="link">view <a href="https://github.com/harry1209/Blog" target="_blank">project</a></p>
 				<div class="row2">
 					<section>
 						<h3>Basic function</h3>
-						<p>1. Browse the item</p>
-						<p>2. Sign up and sign in</p>
-						<p>3. search the item you want</p>
-						<p>4. add the item to the shopping-cart</p>
-						<p>5. check-out</p>
+						<p>1. Sign up and sign in</p>
+						<p>2. Browse and comment the article</p>
+						<p>3. Search the article you want</p>
+						<p>4. Upload the article and the image</p>
 					</section>
 					<div class="float-clear"></div>
 				</div>
