--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				</div>
 				<div class="float-clear"></div>
 			</div>
-			<p class="page-title">&lt;skill/&gt;</p>
+			<p class="page-title">&lt;/skill&gt;</p>
 		</div>
 	</section>
 	<section id="about">
@@ -156,7 +156,7 @@
 					<div class="float-clear"></div>
 				</div>
 			</div>
-			<p class="page-title">&lt;about/&gt;</p>
+			<p class="page-title">&lt;/about&gt;</p>
 		</div>
 	</section>
 	<section id="works">
@@ -191,7 +191,7 @@
 					<div class="float-clear"></div>
 				</div>
 			</div>
-			<p class="page-title">&lt;works/&gt;</p>
+			<p class="page-title">&lt;/works&gt;</p>
 		</div>
 	</section>
 	<section id="contact">
