--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<th>&nbsp;</th>
 							<th>Know</th>
 							<th>Familiar With &nbsp;</th>
-							<th>Good At</th>
+							<th>Proficiency In</th>
 						</tr>
 						<tr>
 							<td>HTML</td>
@@ -69,16 +69,20 @@
 							<td colspan="4"><div><span style="width:200px; background-color: #00BD00;"></span></div></td>
 						</tr>
 						<tr>
+							<td>PHP</td>
+							<td colspan="4"><div><span style="width:180px; background-color: #0A75BB;"></span></div></td>
+						</tr>
+						<tr>
 							<td>jQuery</td>
-							<td colspan="4"><div><span style="width:100px; background-color: #0A75BB;"></span></div></td>
+							<td colspan="4"><div><span style="width:160px; background-color: #99ffcc;"></span></div></td>
 						</tr>
 						<tr>
 							<td>DataBase</td>
-							<td colspan="4"><div><span style="width:100px; background-color: #AAA;"></span></div></td>
+							<td colspan="4"><div><span style="width:200px; background-color: #ff5050;"></span></div></td>
 						</tr>
 						<tr>
 							<td>J2EE</td>
-							<td colspan="4"><div><span style="width:180px; background-color: #AAA;"></span></div></td>
+							<td colspan="4"><div><span style="width:180px; background-color: #9933ff;"></span></div></td>
 						</tr>
 						<tr>
 							<td>ASP.Net</td>
@@ -94,15 +98,15 @@
 						</tr>
 						<tr>
 							<td>Photoshop</td>
-							<td colspan="4"><div><span style="width:130px; background-color: #183C6F;"></span></div></td>
+							<td colspan="4"><div><span style="width:180px; background-color: #183C6F;"></span></div></td>
 						</tr>
 					</table>
 				</div>
 				<div class="col3">
 					<section>
 						<h3>Web Development</h3>
-						<p>Good at HTML, CSS, JavaScript</p>
-						<p>Good at SQL query</p>
+						<p>Proficiency in HTML, CSS, JavaScript</p>
+						<p>Proficiency in SQL query</p>
 						<p>Experience of several websites development</p>
 						<p>Familiar with popular IDE</p>
 					</section>
@@ -110,12 +114,12 @@
 						<h3>Related Skills</h3>
 						<p>Developing several Android apps）</p>
 						<p>Familiar with mainstream OS developing environment</p>
-						<p>Good at Linux shell script</p>
+						<p>Proficiency in Linux shell script</p>
 					</section>
 					<section>
 						<h3>Goals</h3>
-						<p>Learn PHP, Node.js</p>
-						<p>Keep studying jQuery JavaScript</p>
+						<p>Learn Node.js</p>
+						<p>Keep studying PHP, jQuery and JavaScript</p>
 					</section>
 				</div>
 				<div class="float-clear"></div>
